Quick fix: sidebar collapsed state UI

--- a/src/main/resources/css/sidebar.css
+++ b/src/main/resources/css/sidebar.css
@@ -1,6 +1,4 @@
 .sidebar {
-    -fx-max-width: 256px;
-    -fx-min-width: 256px;
     -fx-background-color: #171717;
     -fx-background-radius: 0px 6px 6px 0px;
     -fx-border-color: #333;
@@ -10,6 +8,19 @@
 .sidebar-inner-container {
     -fx-padding: 0px 24px 16px 24px;
     -fx-spacing: 16px;
+}
+
+.sidebar-inner-container-collapsed {
+    -fx-padding: 0px 12px 16px 12px;
+    -fx-spacing: 16px;
+}
+
+.sidebar-title-container {
+    -fx-padding: 16px;
+}
+
+.sidebar-title-container-collapsed {
+    -fx-padding: 16px 12px;
 }
 
 .sidebar-title {
